--- a/pom.xml
+++ b/pom.xml
@@ -21,19 +21,19 @@
 
 	<dependencies>
 
-<!-- 		<dependency> -->
-<!-- 		<groupId>com.microsoft.azure</groupId> -->
-<!-- 		<artifactId>spring-data-cosmosdb</artifactId> -->
-<!-- 		<version>2.0.3</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.microsoft.azure</groupId> -->
-<!-- 			<artifactId>azure-documentdb-spring-boot-starter</artifactId> -->
-<!-- 			<version>2.0.4</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.microsoft.azure</groupId> -->
+		<!-- <artifactId>spring-data-cosmosdb</artifactId> -->
+		<!-- <version>2.0.3</version> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.microsoft.azure</groupId> -->
+		<!-- <artifactId>azure-documentdb-spring-boot-starter</artifactId> -->
+		<!-- <version>2.0.4</version> -->
+		<!-- </dependency> -->
 		<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-data-mongodb</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,6 +43,18 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.8.0</version>
 		</dependency>
 
 		<dependency>
